<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.sixsprints</groupId>
	<artifactId>notification</artifactId>
	<version>0.1.19</version>
	<name>notification-api</name>
	<packaging>jar</packaging>
	<description>Notification API</description>
	<properties>
		<java.version>17</java.version>
		<commons.email.version>1.5</commons.email.version>
		<lombok.version>1.18.30</lombok.version>
		<junit.version>5.10.0</junit.version>
		<json.transform.version>0.1.17</json.transform.version>
		<handlebars.version>4.3.1</handlebars.version>
		<maven.compiler.plugin.version>3.11.0</maven.compiler.plugin.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-email</artifactId>
			<version>${commons.email.version}</version>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>${lombok.version}</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>com.github.Six-Sprints</groupId>
			<artifactId>json-transform</artifactId>
			<version>${json.transform.version}</version>
		</dependency>
		<dependency>
			<groupId>com.github.jknack</groupId>
			<artifactId>handlebars</artifactId>
			<version>${handlebars.version}</version>
		</dependency>
		<dependency>
			<groupId>co.freelens</groupId>
			<artifactId>onesignal-java-client</artifactId>
			<version>1.2.2</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven.compiler.plugin.version}</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<encoding>${project.build.sourceEncoding}</encoding>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<repositories>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>
</project>
